# Infa--

./: CMakeLists.txt  README.md  expression.ij  main.cpp  test.cpp  test.ij
.github/workflows/: linter.yaml
custom-backend/: README.md
frontend/: Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  README.md  Token.cpp  Token.h  TypeInference.cpp  TypeInference.h
frontend/Nodes/: AssignmentNode.cpp  AssignmentNode.h  BoolNode.cpp  BoolNode.h  BooleanExpressionNode.cpp  BooleanExpressionNode.h  BuiltInFuctions.cpp  BuiltInFuctions.h  CallableNode.cpp  CallableNode.h  CharNode.cpp  CharNode.h  FloatNode.cpp  FloatNode.h  ForNode.cpp  ForNode.h  FunctionCallNode.cpp  FunctionCallNode.h  FunctionDefinition.cpp  FunctionDefinition.h  IntNode.cpp  IntNode.h  MathOpNode.cpp  MathOpNode.h  Node.h  ParameterNode.cpp  ParameterNode.h  StatementNode.h  StringNode.cpp  StringNode.h  VariableNode.cpp  VariableNode.h  VariableReferenceNode.cpp  VariableReferenceNode.h
llvm-backend/: CodegenVisitor.cpp  README.md  codegen.h  extern_codegen.cpp
middle-end/: README copy.md
tests/: expressionTest.cpp
